# NovaFund

.github/workflows/: security.yml
backend/: package-lock.json  package.json
backend/modules/__tests__/: apr.utils.spec.ts
backend/modules/portfolio/: portfolio.service.ts  portfolio.types.ts
backend/modules/portfolio/__tests__/: portfolio.service.spec.ts
backend/prisma/: schema.prisma
backend/src/: app.module.ts  user.controller.ts
backend/src/notification/: notification.controller.spec.ts  notification.controller.ts  notification.module.ts
backend/src/notification/services/: email.service.spec.ts  notification.service.spec.ts  notification.service.ts  (+1 more)
backend/src/oracle/: cron-job.ts  price-oracle.repository.ts  price-oracle.service.ts
backend/src/project/: investment-intent.resolver.ts  investment-intent.service.spec.ts  investment-intent.service.ts  project.module.ts  project.resolver.ts  project.service.spec.ts  tagger.service.spec.ts  tagger.service.ts
backend/src/stellar/: federation.controller.ts  federation.service.ts  pathfinder.service.spec.ts  pathfinder.service.ts  rpc-fallback.service.spec.ts  stellar.module.ts
backend/src/user/: account-security.service.ts  user.module.ts
contracts/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/identity/src/: identity_registry.rs  identity_registry_test.rs  lib.rs  test.rs
contracts/milestone-oracle/src/: lib.rs
contracts/patches/soroban-token-sdk/: Cargo.toml
contracts/perk-auction/: Cargo.toml  README.md
contracts/perk-auction/src/: lib.rs  tests.rs
contracts/project-launch/src/: lib.rs  rwa_token_sep8.rs
contracts/shared/src/: constants.rs
frontend/src/lib/: stellar.ts
(+7 files in other folders)
