[workspace]
resolver = "2"

members = [
    "project-launch",
    "escrow",
    "profit-distribution",
    "subscription-pool",
    "multi-party-payment",
    "reputation",
    "governance",
    "cross-chain-bridge",
    "insurance-pool",
    "amm-liquidity-pools",
    "shared",
    "identity",
    "oracle-network",
    "auto-invest-pool",
    "base-token",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[patch.crates-io]
# Windows: published crate uses `crate-type = ["cdylib", "rlib"]`, which breaks `cargo test`
# (PE >65k exports). Path crate is `rlib` only; WASM release builds for contracts are unaffected.
soroban-token-sdk = { path = "patches/soroban-token-sdk" }
