[package]
name = "soroban-token-sdk"
version = "21.7.7"
description = "Soroban token SDK containing utilities for creating custom tokens on Soroban."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.74.0"

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = "21.7.7"
